--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Triangle WebGL</title>
+        <title>WebGL 3D</title>
         <link href="css/style.css" rel="stylesheet">
         <script id="shader-fs" type="x-shader/x-fragment">
         	precision mediump float;
@@ -11,7 +11,7 @@
 
         	void main(void) {
                 gl_FragColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
-        	}	
+        	}
         </script>
         <script id="shader-vs" type="x-shader/x-vertex">
         	attribute vec3 vertexPosition;
