--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			}
         </script>
     </head>
-    <body onload="window.disableLongTouch()">
+    <body>
         <canvas id="webgl-canvas" style="border:none;"></canvas>
         <div id="ui">
             <label>Ambient Color [R, G, B]: </label>
