Change UI style

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </head>
     <body>
         <canvas id="webgl-canvas" style="border:none;"></canvas>
-        <div id="ui">
+        <div id="ui" class="scroll">
             <label>Ambient Color [R, G, B]: </label>
             <input type="text" id="ambientR" size="3" placeholder="R" value="0.02">
             <input type="text" id="ambientG" size="3" placeholder="G" value="0.02">
