Color picker for Ambient Color

--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
             <button id="btn_save" onclick="window.onSaveClick()">Save</button>
             <br>
             <label>Ambient Color [R, G, B]: </label>
-            <input type="text" id="ambientR" size="3" placeholder="R" value="">
-            <input type="text" id="ambientG" size="3" placeholder="G" value="">
-            <input type="text" id="ambientB" size="3" placeholder="B" value="">
+            <input type="color" id="rgbAmb">
             <br>
             <label>Lighting Direction [direction(x, y, z) | color(r, g, b)]: </label>
             <br>
