Add slider for changing lighting direction color

--- a/index.html
+++ b/index.html
@@ -85,9 +85,14 @@
             <input type="text" id="directionX" size="3" placeholder="x" value="-0.25">
             <input type="text" id="directionY" size="3" placeholder="y" value="-0.25">
             <input type="text" id="directionZ" size="3" placeholder="z" value="-1.0">
+            <input type="range" id="directionR" min="0" max="255" step="1" value="2">
+            <input type="range" id="directionG" min="0" max="255" step="1" value="2">
+            <input type="range" id="directionB" min="0" max="255" step="1" value="2">
+            <!--
             <input type="text" id="directionR" size="3" placeholder="r" value="0.2">
             <input type="text" id="directionG" size="3" placeholder="g" value="0.2">
             <input type="text" id="directionB" size="3" placeholder="b" value="0.2">
+            -->
             <br>
             <label>Lights [position(x, y, z) | color(r, g, b)]: </label>
             <br>
